# routes/api.php
@@ -66,3 +66,4 @@ Route::post('/start-racer/{id}', [StartRaceController::class, 'StartRacer'])->na
  */
 Route::get('/race-accepted/{id}', [RaceAcceptedController::class, 'AcceptedRacer'])->name('AcceptedRacer');
 Route::put('/race-accepted/{id}/{running}', [RaceAcceptedController::class, 'update'])->name('update');
+Route::put('/race-finished/{id}/{finished}', [RaceAcceptedController::class, 'FinishedRacer'])->name('FinishedRacer');
